--- a/indx.html
+++ b/indx.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="container" id="container">
+        <div class="rating" >4.5</div>
         <div class="rating" >3.2</div>
-        <!-- <div class="rating" >3.2</div>
         <div class="rating" >4.8</div>
         <div class="rating" >5</div>
-        <div class="rating" >2.6</div> -->
+        <div class="rating" >2.6</div>
     </div>
     
     <script src="stars.js"></script>
